recursion.cons.lessons.recursion.cons.Length.scala.error
length:4: error: illegal start of simple pattern
		case [] => count
                     ^length:5: error: '=>' expected but ';' found.
		case l => count = count + 1; length (l.tail)
^