recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = { 
	var count:Int = 0
	l match {
		case [] => count
		case l => count = count + 1; length (l.tail)
	}
}